<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presenter.MainFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/Theme.Design.NoActionBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/circular_search"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.SearchView
            android:id="@+id/searchView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal|textNoSuggestions"
            app:iconifiedByDefault="false"
            app:queryBackground="@android:color/transparent"
            app:queryHint="Enter the BIN/IIN"
            app:searchIcon="@null" />

    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        style="@style/TabLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:tabMaxWidth="0dp"
        app:tabGravity="fill"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:tabTextAppearance="@style/TabTextStyle">

        <com.google.android.material.tabs.TabItem
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:tag="allTabItem"
            android:text="Card" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:tag="fixedTabItem"
            android:text="Search History" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bankConstraintLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@id/tabLayout"
        app:layout_constraintEnd_toEndOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="@+id/guideline1">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="185dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/scheme_network"
            app:layout_constraintEnd_toStartOf="@id/guideline3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/schemeTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@android:color/tab_indicator_text"
            app:layout_constraintEnd_toStartOf="@id/guideline3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView"
            tools:text="Visa"
            android:text="@string/issue"/>


        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/brand"
            app:layout_constraintEnd_toStartOf="@id/guideline3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/schemeTextView" />

        <TextView
            android:id="@+id/brandTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@android:color/tab_indicator_text"
            app:layout_constraintEnd_toStartOf="@id/guideline3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView2"
            tools:text="Visa/Dankort"
            android:text="@string/issue"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/card_number"
            app:layout_constraintEnd_toStartOf="@id/guideline3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/brandTextView" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/length"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView3" />

        <TextView
            android:id="@+id/lengthTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView4"
            tools:text="16"
            android:text="@string/issue"/>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:text="@string/luhn"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@id/textView4"
            app:layout_constraintTop_toTopOf="@id/textView4" />

        <TextView
            android:id="@+id/luhnYesTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@id/textView5"
            app:layout_constraintTop_toBottomOf="@id/textView5" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slash"
            app:layout_constraintBottom_toBottomOf="@id/luhnYesTextView"
            app:layout_constraintStart_toEndOf="@id/luhnYesTextView"
            app:layout_constraintTop_toBottomOf="@id/textView5" />

        <TextView
            android:id="@+id/luhnNoTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@id/textView6"
            app:layout_constraintStart_toEndOf="@id/textView6"
            app:layout_constraintTop_toTopOf="@id/textView6" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/type"
            app:layout_constraintEnd_toStartOf="@id/guideline3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lengthTextView" />

        <TextView
            android:id="@+id/debitTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/tab_indicator_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView7"
            android:text="@string/debit" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slash"
            app:layout_constraintBottom_toBottomOf="@id/debitTextView"
            app:layout_constraintStart_toEndOf="@id/debitTextView"
            app:layout_constraintTop_toBottomOf="@id/textView7" />

        <TextView
            android:id="@+id/creditTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/tab_indicator_text"
            app:layout_constraintBottom_toBottomOf="@id/textView8"
            app:layout_constraintStart_toEndOf="@id/textView8"
            app:layout_constraintTop_toTopOf="@id/textView8"
            android:text="@string/credit" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/prepaid"
            app:layout_constraintStart_toEndOf="@id/guideline3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/prepaidYesTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/yes"
            app:layout_constraintStart_toStartOf="@id/guideline3"
            app:layout_constraintTop_toBottomOf="@id/textView10" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slash"
            app:layout_constraintBottom_toBottomOf="@id/prepaidYesTextView"
            app:layout_constraintStart_toEndOf="@id/prepaidYesTextView"
            app:layout_constraintTop_toTopOf="@id/prepaidYesTextView" />

        <TextView
            android:id="@+id/prepaidNoTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/no"
            app:layout_constraintBottom_toBottomOf="@id/textView9"
            app:layout_constraintStart_toEndOf="@id/textView9"
            app:layout_constraintTop_toTopOf="@id/textView9" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/country"
            app:layout_constraintStart_toEndOf="@id/guideline3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/prepaidYesTextView" />

        <TextView
            android:id="@+id/emojiTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/issue"
            android:textColor="@android:color/tab_indicator_text"
            app:layout_constraintStart_toEndOf="@id/guideline3"
            app:layout_constraintTop_toBottomOf="@id/textView12"
            tools:text="DK" />

        <TextView
            android:id="@+id/countryTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@android:color/tab_indicator_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/emojiTextView"
            app:layout_constraintTop_toTopOf="@id/emojiTextView"
            tools:text="Denmark" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/latitude_part"
            android:textColor="@android:color/tab_indicator_text"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/countryTextView" />

        <TextView
            android:id="@+id/latitudeTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@android:color/tab_indicator_text"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@id/textView13"
            app:layout_constraintStart_toEndOf="@id/textView13"
            app:layout_constraintTop_toTopOf="@id/textView13"
            tools:text="56"
            android:text="@string/issue" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@android:color/tab_indicator_text"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@id/latitudeTextView"
            app:layout_constraintStart_toEndOf="@id/latitudeTextView"
            app:layout_constraintTop_toTopOf="@id/latitudeTextView"
            android:text="@string/longitude_part" />

        <TextView
            android:id="@+id/longitudeTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@android:color/tab_indicator_text"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@id/textView11"
            app:layout_constraintStart_toEndOf="@id/textView11"
            app:layout_constraintTop_toTopOf="@id/textView11"
            tools:text="10"
            android:text="@string/issue"/>

        <TextView
            android:id="@+id/textView14"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@android:color/tab_indicator_text"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@id/longitudeTextView"
            app:layout_constraintStart_toEndOf="@id/longitudeTextView"
            app:layout_constraintTop_toTopOf="@id/longitudeTextView"
            android:text="@string/closing_bracket" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/bank"
            app:layout_constraintStart_toEndOf="@id/guideline3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView13" />

        <TextView
            android:id="@+id/bankNameTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/issue"
            android:textColor="@android:color/tab_indicator_text"
            app:layout_constraintStart_toEndOf="@id/guideline3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView15"
            tools:text="Jyske Bank, Hjorring" />

        <TextView
            android:id="@+id/bankUrlTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/issue"
            android:textColor="@android:color/tab_indicator_text"
            app:layout_constraintStart_toEndOf="@id/guideline3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bankNameTextView"
            tools:text="www.jyskebank.dk" />

        <TextView
            android:id="@+id/bankPhoneTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/issue"
            android:textColor="@android:color/tab_indicator_text"
            app:layout_constraintStart_toEndOf="@id/guideline3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bankUrlTextView"
            tools:text="+4589893300" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="gone"
        tools:itemCount="8"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        tools:listitem="@layout/item_list_search_history"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tabLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>